--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>Button Example Code</title>
+<title>Blasst Donation</title>
 
 <!-- START META TAG SECTION -->
 <meta charset="utf-8">
@@ -56,22 +56,14 @@ else if(radG1 == "Other")
 
 
 <!-- PARAGRAPH 1 -->
-Donation Examples
-
-<br><br>
-
-Using Radio Buttons.
-
-<br><br>
-
-Widget Fund Donations
+Blasst Donation Example
 
 <br><br>
 
 <!-- Start of Donation Form -->
 <form target="_self" action="https://www.paypal.com/cgi-bin/webscr" method="post" name="myform">
 <!-- If using a Business or Company Logo Graphic, include the "cpp_header_image" variable. -->
-<input type="hidden" name="cpp_header_image" value="https://yourwebsite.com/logo.jpg">
+<input type="hidden" name="cpp_header_image" value="http://img.pagecloud.com/wqnTcyjwwvdR_4hBfbuiIUPj0fM=/104x0/blasst/images/BlasstLogo-ID-093f0126-c208-47d2-d00a-3051932088ed.png">
 <input type="hidden" name="on0" value="Donation Amount"> 
 
 <input name="os0" type="radio" value="1.00"> 
