--- a/index.html
+++ b/index.html
@@ -99,13 +99,11 @@ $50.00
 <input name="os0" type="radio" value="100.00"> 
 $100.00
 <br>
-
-<br><br>
 <input name="os0" type="radio" value="Other"> 
 Other - Enter a custom amount!
 
 <br><br>
-<input type="reset">
+<!--<input type="reset"> -->
 <br><br><br>
 
 <input type="image" src="images/Donate.png" border="0" name="submit" onClick="CalculateOrder(this.form)" alt="Make payments with PayPal - it's fast, free and secure!">
