--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <title>Blasst Donation</title>
 
+<link rel="stylesheet" media="all" href="radiobuttons.css" />
+
 <!-- START META TAG SECTION -->
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
