Added class tag to radio buttons

--- a/index.html
+++ b/index.html
@@ -83,25 +83,25 @@ Blasst Donation Example
 <input type="hidden" name="cpp_header_image" value="images/BlasstLogo.png">
 <input type="hidden" name="on0" value="Donation Amount"> 
 
-<input name="os0" type="radio" value="2.00"> 
+<input name="os0" class="option-input radio" type="radio" value="2.00"> 
 $2.00
 <br>
-<input name="os0" type="radio" value="5.00"> 
+<input name="os0" class="option-input radio" type="radio" value="5.00"> 
 $5.00
 <br>
-<input name="os0" type="radio" value="10.00"> 
+<input name="os0" class="option-input radio" type="radio" value="10.00"> 
 $10.00
 <br>
-<input name="os0" type="radio" value="20.00"> 
+<input name="os0" class="option-input radio" type="radio" value="20.00"> 
 $20.00
 <br>
-<input name="os0" type="radio" value="50.00"> 
+<input name="os0" class="option-input radio" type="radio" value="50.00"> 
 $50.00
 <br>
-<input name="os0" type="radio" value="100.00"> 
+<input name="os0" class="option-input radio" type="radio" value="100.00"> 
 $100.00
 <br>
-<input name="os0" type="radio" value="Other"> 
+<input name="os0" class="option-input radio" type="radio" value="Other"> 
 Other - Enter a custom amount!
 
 <br><br>
