--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ $50.00
 $100.00
 <br>
 <input name="os0" class="option-input radio" type="radio" value="Other"> 
-Other - Enter a custom amount!
+Other
 
 <br><br>
 <!--<input type="reset"> -->
