Troubleshooting font disspaearing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <title>Blasst Donation</title>
 
-<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' />
 
 <link rel="stylesheet" media="all" href="radiobuttons.css" />
 
@@ -73,22 +73,15 @@ else if(radG1 == "Other")
 <input type="hidden" name="cpp_header_image" value="images/BlasstLogo.png">
 <input type="hidden" name="on0" value="Donation Amount"> 
 
-<div id="radios">
-<input name="os0" class="option-input radio" type="radio" value="2.00"> 
-<label>$2.00</label>
-<input name="os0" class="option-input radio" type="radio" value="5.00"> 
-<label>$5.00</label>
-<input name="os0" class="option-input radio" type="radio" value="10.00"> 
-<label>$10.00</label>
-<input name="os0" class="option-input radio" type="radio" value="20.00"> 
-<label>$20.00</label>
-<input name="os0" class="option-input radio" type="radio" value="50.00"> 
-<label>$50.00</label>
-<input name="os0" class="option-input radio" type="radio" value="100.00"> 
-<label>$100.00</label>
-<input name="os0" class="option-input radio" type="radio" value="Other"> 
-<label>Other</label>
-</div>
+
+<input name="os0" class="option-input radio" type="radio" value="2.00"><label>$2.00</label>
+<input name="os0" class="option-input radio" type="radio" value="5.00"><label>$5.00</label>
+<input name="os0" class="option-input radio" type="radio" value="10.00"><label>$10.00</label>
+<input name="os0" class="option-input radio" type="radio" value="20.00"><label>$20.00</label>
+<input name="os0" class="option-input radio" type="radio" value="50.00"><label>$50.00</label>
+<input name="os0" class="option-input radio" type="radio" value="100.00"><label>$100.00</label>
+<input name="os0" class="option-input radio" type="radio" value="Other"><label>Other</label>
+
 
 <br><br>
 <!--<input type="reset"> -->
