--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   background: #9faab7;
 }
 .option-input:checked {
-  background: #40e0d0;
+  background: #16c1c8;
 }
 .option-input:checked::before {
   height: 40px;
@@ -65,7 +65,7 @@
   -webkit-animation: click-wave 0.65s;
   -moz-animation: click-wave 0.65s;
   animation: click-wave 0.65s;
-  background: #40e0d0;
+  background: #16c1c8;
   content: '';
   display: block;
   position: relative;
@@ -91,19 +91,21 @@ body {
   display: -moz-box;
   display: -ms-flexbox;
   display: box;
-  background: #e8ebee;
-  color: #9faab7;
+
   font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
   text-align: center;
 }
 body div {
   padding: 5rem;
+  background: #150811;
+  color: #FFFFFF;
 }
 body label {
   display: block;
   line-height: 40px;
 }
-</style>
+
+<style>
 
 <title>Blasst Donation</title>
 
@@ -173,10 +175,10 @@ else if(radG1 == "Other")
 <!-- Start of Donation Form -->
 <form target="_self" action="https://www.paypal.com/cgi-bin/webscr" method="post" name="myform">
 <!-- If using a Business or Company Logo Graphic, include the "cpp_header_image" variable. -->
-<input type="hidden" name="cpp_header_image" value="images/BlasstLogo.png">
+<input type="hidden" name="cpp_header_image" value="http://blasstdonation.azurewebsites.net/images/BlasstLogo.png">
 <input type="hidden" name="on0" value="Donation Amount"> 
 
-
+<!--<div-->
 <input name="os0" class="option-input radio" type="radio" value="2.00"><label>$2</label>
 <input name="os0" class="option-input radio" type="radio" value="5.00"><label>$5</label>
 <input name="os0" class="option-input radio" type="radio" value="10.00"><label>$10</label>
@@ -184,11 +186,11 @@ else if(radG1 == "Other")
 <input name="os0" class="option-input radio" type="radio" value="50.00"><label>$50</label>
 <input name="os0" class="option-input radio" type="radio" value="100.00"><label>$100</label>
 <input name="os0" class="option-input radio" type="radio" value="Other"><label>Other</label>
-
+<!--</div>-->
 
 <br><br>
 <!--<input type="reset"> -->
-<input type="image" src="images/Donate.png" border="0" name="submit" onClick="CalculateOrder(this.form)" alt="Make payments with PayPal - it's fast, free and secure!">
+<input type="image" src="http://blasstdonation.azurewebsites.net/images/BlasstLogo.png" border="0" name="submit" onClick="CalculateOrder(this.form)" alt="Make payments with PayPal - it's fast, free and secure!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 <input type="hidden" name="cmd" value="_donations">
 <!-- Replace "business" value with your PayPal Email Address or your Merchant Account ID -->
