Arranged checkboxes into 2 columns

--- a/index.html
+++ b/index.html
@@ -180,20 +180,34 @@ else if(radG1 == "Other")
 
 <table>
 <tr>
+	<td><input name="os0" class="option-input radio" type="radio" value="2.00"><label>$2</label></td>
+	<td><input name="os0" class="option-input radio" type="radio" value="5.00"><label>$5</label></td>
+</tr>
+<tr>
+	<td><input name="os0" class="option-input radio" type="radio" value="10.00"><label>$10</label></td>
+	<td><input name="os0" class="option-input radio" type="radio" value="20.00"><label>$20</label></td>
+</tr>
+<tr>
+	<td><input name="os0" class="option-input radio" type="radio" value="50.00"><label>$50</label></td>
+	<td><input name="os0" class="option-input radio" type="radio" value="100.00"><label>$100</label></td>
+</tr>
+<tr>
+	<td><input name="os0" class="option-input radio" type="radio" value="Other"><label>Other</label></td>
 	<td></td>
 </tr>
 <tr>
+	<td></td>
+	<td></td>
 </tr>
-<tr></tr>
-<tr></tr>
-<tr></tr>
-<input name="os0" class="option-input radio" type="radio" value="2.00"><label>$2</label>
-<input name="os0" class="option-input radio" type="radio" value="5.00"><label>$5</label>
-<input name="os0" class="option-input radio" type="radio" value="10.00"><label>$10</label>
-<input name="os0" class="option-input radio" type="radio" value="20.00"><label>$20</label>
-<input name="os0" class="option-input radio" type="radio" value="50.00"><label>$50</label>
-<input name="os0" class="option-input radio" type="radio" value="100.00"><label>$100</label>
-<input name="os0" class="option-input radio" type="radio" value="Other"><label>Other</label>
+</table>
+
+
+
+
+
+
+
+
 <!--</div>-->
 
 <br><br>
