Style tag change

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ body label {
   line-height: 40px;
 }
 
-<style>
+</style>
 
 <title>Blasst Donation</title>
 
@@ -164,6 +164,7 @@ else if(radG1 == "Other")
  document.myform.item_number.value = "BL-0-00";
  }     
 }
+
 // -->
 </script>
 <!-- End of Script -->
