Removed Div, made background black

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 .bodydiv {
   padding: 5rem;
   background: #150811;
-  color: #FFFFFF;
+  color: #000000;
 }
 .labeltext {
   float: left;
@@ -169,8 +169,8 @@ else if(radG1 == "Other")
 <!-- End of Script -->
 
 </head>
-<body>
-<div class="bodymain">
+<body class="bodymain">
+
 <!-- Start of Donation Form -->
 <form target="_self" action="https://www.paypal.com/cgi-bin/webscr" method="post" name="myform">
 <!-- If using a Business or Company Logo Graphic, include the "cpp_header_image" variable. -->
@@ -221,6 +221,6 @@ else if(radG1 == "Other")
 <input type="hidden" name="bn" value="PP-DonationsBF:btn_donateCC_LG.gif:NonHosted">
 </form> 
 
-</div>
+
 </body>
 </html>
