Update images to reflect google cloud location change

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ else if(radG1 == "Other")
 <!-- Start of Donation Form -->
 <form target="_self" action="https://www.paypal.com/cgi-bin/webscr" method="post" name="myform">
 <!-- If using a Business or Company Logo Graphic, include the "cpp_header_image" variable. -->
-<input type="hidden" name="cpp_header_image" value="http://blasstdonation.azurewebsites.net/images/BlasstLogo.png">
+<input type="hidden" name="cpp_header_image" value="images/BlasstLogo.png">
 <input type="hidden" name="on0" value="Donation Amount"> 
 
 <table>
@@ -199,7 +199,7 @@ else if(radG1 == "Other")
 
 <br><br>
 <!--<input type="reset"> -->
-<input type="image" src="http://blasstdonation.azurewebsites.net/images/DonateNowButton.png" border="0" name="submit" onClick="CalculateOrder(this.form)" alt="Make payments with PayPal - it's fast, free and secure!">
+<input type="image" src="images/DonateNowButton.png" border="0" name="submit" onClick="CalculateOrder(this.form)" alt="Make payments with PayPal - it's fast, free and secure!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 <input type="hidden" name="cmd" value="_donations">
 <!-- Replace "business" value with your PayPal Email Address or your Merchant Account ID -->
@@ -212,9 +212,9 @@ else if(radG1 == "Other")
 <input type="hidden" name="currency_code" value="USD">
 <input type="hidden" name="lc" value="US">
 <!-- Replace value with the web page you want the customer to return to after a successful transaction -->
-<input type="hidden" name="return" value="https://blasstdonation.azurewebsites.net/thanks.html">
+<input type="hidden" name="return" value="https://blasst.pagecloud.com">
 <!-- Replace value with the web page you want the customer to return to after item cancellation -->
-<input type="hidden" name="cancel_return" value="https://blasstdonation.azurewebsites.net/cancel.html">
+<input type="hidden" name="cancel_return" value="http://blasst.pagecloud.com/">
 <input type="hidden" name="button_subtype" value="products">
 <input type="hidden" name="no_note" value="0">
 <input type="hidden" name="cn" value="Add special instructions to the seller:">
