Update with absiltue paths

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ else if(radG1 == "Other")
 <!-- Start of Donation Form -->
 <form target="_self" action="https://www.paypal.com/cgi-bin/webscr" method="post" name="myform">
 <!-- If using a Business or Company Logo Graphic, include the "cpp_header_image" variable. -->
-<input type="hidden" name="cpp_header_image" value="images/BlasstLogo.png">
+<input type="hidden" name="cpp_header_image" value="http://35.193.127.2/DonationQA/images/BlasstLogo.png">
 <input type="hidden" name="on0" value="Donation Amount"> 
 
 <table>
@@ -199,7 +199,7 @@ else if(radG1 == "Other")
 
 <br><br>
 <!--<input type="reset"> -->
-<input type="image" src="images/DonateNowButton.png" border="0" name="submit" onClick="CalculateOrder(this.form)" alt="Make payments with PayPal - it's fast, free and secure!">
+<input type="image" src="http://35.193.127.2/DonationQA/images/DonateNowButton.png" border="0" name="submit" onClick="CalculateOrder(this.form)" alt="Make payments with PayPal - it's fast, free and secure!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 <input type="hidden" name="cmd" value="_donations">
 <!-- Replace "business" value with your PayPal Email Address or your Merchant Account ID -->
